// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner defaults to error mode 1`] = `
<DocumentFragment>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</DocumentFragment>
`;

exports[`Banner shows "Details" button and has dialog when there is additional info 1`] = `
<DocumentFragment>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary button detailsButton css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Details
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner shows "Refresh" button when passed a refresh function 1`] = `
<DocumentFragment>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary button refreshButton css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Refresh
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner shows troubleshooting link instructed by prop 1`] = `
<DocumentFragment>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    >
      <a
        class="troubleShootingLink"
        href="https://www.kubeflow.org/docs/pipelines/troubleshooting"
      >
        Troubleshooting guide
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner uses error mode when instructed 1`] = `
<DocumentFragment>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</DocumentFragment>
`;

exports[`Banner uses info mode when instructed 1`] = `
<DocumentFragment>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="InfoIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</DocumentFragment>
`;

exports[`Banner uses warning mode when instructed 1`] = `
<DocumentFragment>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="WarningIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</DocumentFragment>
`;
